--- a/micro-master-in-ai-and-programming/WSP003-async-nodejs-promises/package.json
+++ b/micro-master-in-ai-and-programming/WSP003-async-nodejs-promises/package.json
@@ -14,5 +14,9 @@
     "@types/node": "^20.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/papaparse": "^5.3.8",
+    "papaparse": "^5.4.1"
   }
 }
