--- a/micro-master-in-ai-and-programming/WSP003-async-nodejs-promises/tsconfig.json
+++ b/micro-master-in-ai-and-programming/WSP003-async-nodejs-promises/tsconfig.json
@@ -13,8 +13,7 @@
       "noImplicitThis": true,
       "noImplicitAny": true,
       "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "noUnusedLocals": true
+      "noUnusedLocals": true,
     },
     "exclude": ["node_modules", "build", "scripts", "index.js"]
   }
