--- a/micro-master-in-ai-and-programming/WSP004-free-topics-typescript/package.json
+++ b/micro-master-in-ai-and-programming/WSP004-free-topics-typescript/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "daily-challenge.js",
   "scripts": {
+    "start": "ts-node app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
