--- a/micro-master-in-ai-and-programming/WSP005-http-express-middlewares/example-express/package.json
+++ b/micro-master-in-ai-and-programming/WSP005-http-express-middlewares/example-express/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "example",
+  "name": "example-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev main.ts",
+    "test": "tsc -p . --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "ts-node-dev": "^2.0.0"
   }
 }
